objects/wkitsm__ConfigurationItemRelationship__c.object
<CustomObject>
    <description>Relationships between Configuration Items</description>
    <fields>
        <fullName>wkitsm__CIRelationshipTypeId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to custom Configuration Item Relationship Type</description>
        <inlineHelpText>Lookup to custom Configuration Item Relationship Type</inlineHelpText>
        <label>Configuration Item Relationship Type</label>
        <referenceTo>wkitsm__ConfigurationItemRelationshipType__c</referenceTo>
        <relationshipLabel>Configuration Item Relationship Types RL</relationshipLabel>
        <relationshipName>CIRelationshipTypes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__CmdbId__c</fullName>
        <description>This field holds the Id coming from the Tanium CMDB query</description>
        <externalId>true</externalId>
        <inlineHelpText>This field holds the Id coming from the Tanium CMDB query</inlineHelpText>
        <label>TaniumCmdbId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__RelationshipNotes__c</fullName>
        <description>Additional notes on a relationship</description>
        <inlineHelpText>Additional notes on a relationship</inlineHelpText>
        <label>Relationship Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkitsm__SourceCI__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Source CI of the Relationship</description>
        <inlineHelpText>Source CI of the Relationship</inlineHelpText>
        <label>Source CI</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Source CI Relationships</relationshipLabel>
        <relationshipName>RelationshipForSourceCI</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__TargetCI__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Target CI of the Relationship</description>
        <inlineHelpText>Target CI of the Relationship</inlineHelpText>
        <label>Target CI</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Target CI Relationships</relationshipLabel>
        <relationshipName>RelationshipForTargetCI</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Configuration Item Relationship</label>
    <nameField>
        <displayFormat>CIR-{000000}</displayFormat>
        <label>Configuration Item Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuration Item Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>